iptables
# Generated by iptables-save v1.4.7 on Mon Dec  3 15:04:34 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 20022 -j ACCEPT 
-A INPUT -s 192.168.142.1/32 -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 10.82.0.0/24 -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 10.81.0.0/24 -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 192.168.142.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p udp -m udp --dport 520 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 20022 -j ACCEPT 
-A OUTPUT -d 10.81.0.0/24 -p tcp -m tcp --sport 80 -j ACCEPT 
-A OUTPUT -d 192.168.142.1/32 -p tcp -m tcp --sport 80 -j ACCEPT 
-A OUTPUT -d 10.82.0.0/24 -p tcp -m tcp --sport 80 -j ACCEPT 
-A OUTPUT -d 192.168.142.0/24 -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A OUTPUT -p udp -m udp --sport 520 -j ACCEPT 
COMMIT
# Completed on Mon Dec  3 15:04:34 2018
# Generated by iptables-save v1.4.7 on Mon Dec  3 15:04:34 2018
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Mon Dec  3 15:04:34 2018
